fix companion app syncing
