# src/main/kotlin/com/plugin/features/user/DTO.kt
@@ -16,3 +16,7 @@ data class UpdateUserRequest(
 data class SocialLogin(val provider: String, val id: String, val providerUserId: String)
 
 typealias GetSocialLoginsResponse = List<SocialLogin>
+
+data class EncryptionKeyResponse(val key: String, val expiresAt: java.time.Instant)
+
+data class PortState(val port: Int?)
